@startuml
!theme materia

class AGENT {
  +idAgent: Long
  +nomAgent: String
  +prenomAgent: String
  +mailAgent: String
  +password: String
}

class CLIENT {
  +idClient: Long
  +nomClient: String
  +prenomClient: String
  +mailClient: String
  +login: String
  +password: String
}

class PAIEMENT {
  +codePaiement: String
  +datePaiement: Date
  ' reservation: RESERVATION (Clé Étrangère - FK)
  ' agent: AGENT (Clé Étrangère - FK)
}

class RESERVATION {
  +idReservation: Long
  +nombrePlacesReservees: Integer
  +dateReservation: Date
  +status: String
  ' client: CLIENT (Clé Étrangère - FK)
  ' voyage: VOYAGE (Clé Étrangère - FK)
  ' typeBillet: TYPE_BILLET (Clé Étrangère - FK)
}

class TYPE_BILLET {
  +idTypeBillet: Long
  +libelleTypeBillet: String
  +prixTypeBillet: Double
}

class VOYAGE {
  +idVoyage: Long
  +departVoyage: String
  +arriveVoyage: String
  +dateVoyage: Date
  +prix: Double
}

AGENT "1" -- "0..*" PAIEMENT : paiementList
CLIENT "1" -- "0..*" RESERVATION : reservations
RESERVATION "1" -- "0..*" PAIEMENT : paiementList

RESERVATION "1" -- "1" CLIENT : client
RESERVATION "1" -- "1" VOYAGE : voyage
RESERVATION "1" -- "1" TYPE_BILLET : typeBillet

VOYAGE "1" -- "0..*" RESERVATION : reservations
TYPE_BILLET "1" -- "0..*" RESERVATION : reservations

PAIEMENT "1" -- "1" RESERVATION : reservation
PAIEMENT "1" -- "1" AGENT : agent

@enduml
